<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tv_show">Detail Tv Show</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="release">Release : </string>
    <string name="first_air_date">First Air Date : </string>
    <string name="user_score">User Score</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="share_movie_text">Cari info Film berjudul %s di themoviedb.org</string>
    <string name="share_tv_show_text">Cari info Acara Tv berjudul %s di themoviedb.org</string>
    <string name="percentage">%</string>
    <string name="menu_favorite">favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_favorite">Favorite</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="not_yet_favorite">Belum ada yang difavoritkan</string>

</resources>